[gd_scene load_steps=10 format=3 uid="uid://d1vmrvs3aj84o"]

[ext_resource type="Script" path="res://MAIN/misc/tyre sounds/tyres.gd" id="1"]
[ext_resource type="Script" path="res://MAIN/misc/tyre sounds/vars.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://gjka6jqu3b8p" path="res://MAIN/misc/tyre sounds/offroad.ogg" id="3"]
[ext_resource type="AudioStream" uid="uid://crqq84gd1fbsh" path="res://MAIN/misc/tyre sounds/peel0.ogg" id="4"]
[ext_resource type="AudioStream" uid="uid://04ebjdn23ih8" path="res://MAIN/misc/tyre sounds/roll0.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://7pqd0tyxcjgj" path="res://MAIN/misc/tyre sounds/roll1.ogg" id="6"]
[ext_resource type="AudioStream" uid="uid://dp1pkuseb4gfn" path="res://MAIN/misc/tyre sounds/peel1.ogg" id="7"]
[ext_resource type="AudioStream" uid="uid://dyf7guf22o6t0" path="res://MAIN/misc/tyre sounds/roll2.ogg" id="8"]
[ext_resource type="AudioStream" uid="uid://d3b45tmngsrf2" path="res://MAIN/misc/tyre sounds/peel2.ogg" id="9"]

[node name="tyre_sound" type="Node3D"]
script = ExtResource("1")

[node name="roll0" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
volume = 1.0

[node name="roll1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
length = 1.0
volume = 1.0

[node name="roll2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
length = 2.0
volume = 1.0

[node name="peel0" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
width = 1.0
volume = 0.9

[node name="peel1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
length = 1.0
width = 1.0
volume = 0.9

[node name="peel2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
length = 2.0
width = 1.0
volume = 0.9

[node name="dirt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3")
unit_size = 50.0
area_mask = 512
attenuation_filter_db = 0.0
script = ExtResource("2")
volume = 1.0
